# Locdist

./: .gitignore  README.md
experiments/gradient-sync/: go.mod  main.go  master.go  worker.go
experiments/pytorch-gradient-sync/: experiment.py
extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
extension/src/: clusterView.ts  extension.ts  masterClient.ts  masterProcess.ts  studioView.ts  types.ts
master/: README.md  go.mod  go.sum  master_config.json
master/aggregator/: aggregate.go  chunk.go  service.go  service_test.go  state.go
master/app/: api_test.go  controller.go  events.go  server.go
master/coordinator/: coordinator.go
master/discovery/: browser.go  browser_test.go  registry.go  registry_test.go  service.go  service_test.go  state.go
packaging/: README.md
protocol/: gradient.proto
runtime/: README.md  locdist_config.json  pyproject.toml
runtime/locdist/: __init__.py  api.py  compression.py  config.py  exceptions.py  gradients.py  indices.py  metadata.py  metrics.py  models.py  prepare.py  tensor_bytes.py  transport.py  wire.py
runtime/proto/: gradient.proto
runtime/tests/: test_compression.py  test_config.py  test_environment_config.py  test_gradients.py  test_metadata.py  test_models.py  test_prepare.py  test_runtime_flow.py  test_runtime_worker_integration.py  test_transport.py  test_wire.py  test_wire_response.py
tools/: build_release.py  e2e_local_validation.py  package_release.py  publish_github_release.py  stage_extension.py  stage_worker_app.py
worker/: README.md  go.mod  worker_config.json
(+81 files in other folders)
